--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -343,7 +343,7 @@
                 <div *ngFor="let item of itemList; let i = index" class="added-items" style="border-bottom: none;">
                   <div class="item" fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="10px">
                     <span style="width: 45%;" class="cart-item">
-                      <p class="mb-0 ">{{item.Name}}</p>
+                      <p class="mb-0 ">{{item.Name}} {{'name'}}</p>
                       <!--<p class="mb-0">Pizza</p>-->
                     </span>
                     <span fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="15px"
