--- a/src/app/restaurent/base-layout/header/header.component.html
+++ b/src/app/restaurent/base-layout/header/header.component.html
@@ -45,7 +45,7 @@
                 <span><img src="assets/images/default-user.jpg" class="user-pic" width="18px" alt="user-pic"></span><aside class="mt-1 ml-1">Hi {{user.FName}}</aside> 
               </button>
               <div class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" href="javascript:void(0);" routerLink="/{{mobUrl}}/profile"><span><nb-icon icon="person-outline"></nb-icon></span> Profile</a> 
+                <!--<a class="dropdown-item" href="javascript:void(0);" routerLink="/{{mobUrl}}/profile"><span><nb-icon icon="person-outline"></nb-icon></span> Profile</a> -->
                 <!-- <a class="dropdown-item" href="javascript:void(0);" routerLink="/{{country}}/{{mobUrl}}/profile"><span><nb-icon icon="person-outline"></nb-icon></span> Profile</a>  -->
                 <a class="dropdown-item" href="javascript:void(0);" (click)="logout()"><span><nb-icon icon="log-out-outline"></nb-icon></span> Logout</a>
               </div>
