--- a/src/app/restaurent/pages/thankyou/thankyou.component.html
+++ b/src/app/restaurent/pages/thankyou/thankyou.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="modal fade" data-backdrop="static" id="orderSuccessModal1" role="dialog">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -9,8 +9,8 @@
             <ul class="d-flex align-item-center justify-content-between">
               <li>Order No: <span>{{orderId || 'Not Come'}}</span></li>
               <li>|</li>
-              <li>Status - Open</li>
-              <!-- {{orderData.TimeSelection == 0?'Open':'Close'}} -->
+              <li>Status - Open</li> 
+              {{orderData.TimeSelection == 0?'Open':'Close'}}
             </ul>
             <h2 class="py-3 text-center big-check">
               <i class="fa fa-check" aria-hidden="true"></i>
@@ -20,7 +20,7 @@
             <p class="text-white m-0">
               <span>Please Contact 02-6492-2807 for further assistance <i class="fa fa-phone" aria-hidden="true"></i></span>
             </p>
-            <!-- <span id="successOrderId" style="display: none;">{{orderId}}</span> -->
+            <span id="successOrderId" style="display: none;">{{orderId}}</span>
             <ul class="list-unstyled px-0 py-3 border-bottom d-flex align-items-center justify-content-around mb-3">
               <li class="text-center">
                 <img *ngIf="orderData.ServiceId == 1" class="" src="assets/images/foodbag.svg" height="36px">
@@ -58,3 +58,95 @@
   </div>
   <input type="hidden" data-toggle="modal" data-target="#orderSuccessModal1" id="openOrderSuccess">
   
+
+   -->
+
+
+   <!-- Modal -->
+   <div class="modal fade thankyou" data-backdrop="static" id="orderSuccessModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+
+			<div class="modal-header px-0">
+				<div class="col-12">
+					<div class="row w-100 d-flex align-items-center no-gutters mb-3">
+						<div class="col-xs-4"></div>
+						<div class="col-xs-4"><div class="text-center h6 text-white mb-0">Track Order</div></div>
+						<div class="col-xs-4 align-items-end"><a href="javascript:void(0);" data-dismiss="modal"><img src="cross.svg"></a></div>
+					</div>
+					<div class="row w-100 d-flex align-items-center justify-content-between no-gutters text-center">
+						
+						<div class="col-xs-6">
+							<p>Estimated Time</p>
+							<h4 class="text-white">30 minutes</h4>
+						</div>
+						<div class="col-xs-6">
+							<p>Order Number</p>
+							<h4 class="text-white">#123854697</h4>
+						</div>
+						
+					</div>
+				</div>
+			</div>
+
+			<div class="modal-body text-center">
+				<img src="img-4.jpg" class="img-fluid">
+				<p class="text-center">
+					With your help our platform improves the well being of your community. You can enjoy ordering food online and help the community as well. Thank you for choosing Organization Alphonsus Academy. Funny Cow Test Location will contribute $1 towards Organization Alphonosus Academy
+				</p>
+				<button class="btn btn-site">Share & Join our Community</button>
+				<div class="timeline py-4">
+					<ul>
+						<li>
+							<div class="d-flex align-items-center text-left">
+								<div class="icon mr-2"><img src="img-1.svg"></div>
+								<div class="content">
+									<div class="h6 mb-0">Order Placed</div>
+									<p class="mb-0">We have receive your order</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="d-flex align-items-center text-left">
+								<div class="icon mr-2"><img src="img-2.svg"></div>
+								<div class="content">
+									<div class="h6 mb-0">Order Confirmed</div>
+									<p class="mb-0">Your order has been confirmed</p>
+								</div>
+							</div>
+						</li>
+						<li class="active">
+							<div class="d-flex align-items-center text-left">
+								<div class="icon mr-2"><img src="img-3.svg"></div>
+								<div class="content">
+									<div class="h6 mb-0">Order Processed</div>
+									<p class="mb-0">We are preparing your order</p>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="d-flex align-items-center text-left">
+								<div class="icon mr-2"><img src="img-4.svg"></div>
+								<div class="content">
+									<div class="h6 mb-0">Ready to pickup</div>
+									<p class="mb-0">Your order is ready for pickup</p>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="row w-100 d-flex align-items-center justify-content-between mx-0 text-center">
+						
+					<div class="col-xs-6">
+						<button class="btn btn-site">Contact Restaurant</button>
+					</div>
+					<div class="col-xs-6">
+						<button class="btn btn-site">Start New Order</button>
+					</div>
+					
+				</div>
+			</div>
+			
+		</div><!-- modal-content -->
+	</div><!-- modal-dialog -->
+</div><!-- modal -->
