--- a/src/app/restaurent/pages/fooddepo/fooddepo.component.scss
+++ b/src/app/restaurent/pages/fooddepo/fooddepo.component.scss
@@ -352,11 +352,11 @@ section button:hover {
 }
 @media (max-width:1199px ){
 
-  .restaurantImageDiv{
-    max-height: 250px;
-    min-height: 250px;
-    overflow: hidden;
-  }
+  // .restaurantImageDiv{
+  //   max-height: 250px;
+  //   min-height: 250px;
+  //   overflow: hidden;
+  // }
   .addressData{
     max-height: 120px;
     min-height: 120px;
@@ -367,11 +367,11 @@ section button:hover {
 
 @media (max-width:991px ){
 
-  .restaurantImageDiv{
-    max-height: 150px;
-    min-height: 150px;
-    overflow: hidden;
-  }
+  // .restaurantImageDiv{
+  //   max-height: 150px;
+  //   min-height: 150px;
+  //   overflow: hidden;
+  // }
   .addressData{
     max-height: 120px;
     min-height: 120px;
