--- a/src/app/restaurent/pages/thankyou/thankyou.component.html
+++ b/src/app/restaurent/pages/thankyou/thankyou.component.html
@@ -1,5 +1,4 @@
-<!-- 
-<div class="modal fade" data-backdrop="static" id="orderSuccessModal1" role="dialog">
+<!--<div class="modal fade" data-backdrop="static" id="orderSuccessModal1" role="dialog">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-body"> 
@@ -55,11 +54,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
   <input type="hidden" data-toggle="modal" data-target="#orderSuccessModal1" id="openOrderSuccess">
   
 
-   -->
 
 
    <!-- Modal -->
@@ -72,17 +70,21 @@
 					<div class="row w-100 d-flex align-items-center no-gutters mb-3">
 						<div class="col-xs-4"></div>
 						<div class="col-xs-4"><div class="text-center h6 text-white mb-0">Track Order</div></div>
-						<div class="col-xs-4 align-items-end"><a href="javascript:void(0);" data-dismiss="modal"><img src="cross.svg"></a></div>
+						<div class="col-xs-4 align-items-end"><a routerLink="/" data-dismiss="modal"><img src="assets/images/cross.svg"></a></div>
 					</div>
 					<div class="row w-100 d-flex align-items-center justify-content-between no-gutters text-center">
 						
 						<div class="col-xs-6">
 							<p>Estimated Time</p>
-							<h4 class="text-white">30 minutes</h4>
+							<h4 class="text-white" *ngIf="orderData.ServiceId == 1">{{locationDetails.Services[0].ReadyIn}}</h4>
+							<h4 class="text-white" *ngIf="orderData.ServiceId == 2">{{locationDetails.Services[1].ReadyIn}}</h4>
+							<h4 class="text-white" *ngIf="orderData.ServiceId == 3">{{locationDetails.Services[2].ReadyIn}}</h4>
+							<h4 class="text-white" *ngIf="orderData.ServiceId == 5">{{locationDetails.Services[3].ReadyIn}}</h4>
+
 						</div>
 						<div class="col-xs-6">
 							<p>Order Number</p>
-							<h4 class="text-white">#123854697</h4>
+							<h4 class="text-white">{{orderId}}</h4>
 						</div>
 						
 					</div>
@@ -90,16 +92,18 @@
 			</div>
 
 			<div class="modal-body text-center">
-				<img src="img-4.jpg" class="img-fluid">
-				<p class="text-center">
-					With your help our platform improves the well being of your community. You can enjoy ordering food online and help the community as well. Thank you for choosing Organization Alphonsus Academy. Funny Cow Test Location will contribute $1 towards Organization Alphonosus Academy
+				<div *ngFor="let ngo of locationDetails.ngo">
+				<img *ngIf="ngo.RecId == orderData.NGOId" [src]="ngo.Photo" class="img-fluid">
+				<p *ngIf="ngo.RecId == orderData.NGOId" class="text-center">
+					With your help our platform improves the well being of your community. You can enjoy ordering food online and help the community as well. Thank you for choosing Organization {{orderData.NGOName}}. {{locationDetails.Name}} will contribute $1 towards Organization {{orderData.NGOName}}.
 				</p>
+				</div>
 				<button class="btn btn-site">Share & Join our Community</button>
 				<div class="timeline py-4">
 					<ul>
 						<li>
 							<div class="d-flex align-items-center text-left">
-								<div class="icon mr-2"><img src="img-1.svg"></div>
+								<div class="icon mr-2"><img src="assets/images/img-1.svg"></div>
 								<div class="content">
 									<div class="h6 mb-0">Order Placed</div>
 									<p class="mb-0">We have receive your order</p>
@@ -108,7 +112,7 @@
 						</li>
 						<li>
 							<div class="d-flex align-items-center text-left">
-								<div class="icon mr-2"><img src="img-2.svg"></div>
+								<div class="icon mr-2"><img src="assets/images/img-2.svg"></div>
 								<div class="content">
 									<div class="h6 mb-0">Order Confirmed</div>
 									<p class="mb-0">Your order has been confirmed</p>
@@ -117,7 +121,7 @@
 						</li>
 						<li class="active">
 							<div class="d-flex align-items-center text-left">
-								<div class="icon mr-2"><img src="img-3.svg"></div>
+								<div class="icon mr-2"><img src="assets/images/img-3.svg"></div>
 								<div class="content">
 									<div class="h6 mb-0">Order Processed</div>
 									<p class="mb-0">We are preparing your order</p>
@@ -126,7 +130,7 @@
 						</li>
 						<li>
 							<div class="d-flex align-items-center text-left">
-								<div class="icon mr-2"><img src="img-4.svg"></div>
+								<div class="icon mr-2"><img src="assets/images/img-4.svg"></div>
 								<div class="content">
 									<div class="h6 mb-0">Ready to pickup</div>
 									<p class="mb-0">Your order is ready for pickup</p>
@@ -147,6 +151,6 @@
 				</div>
 			</div>
 			
-		</div><!-- modal-content -->
-	</div><!-- modal-dialog -->
+		</div>
+	</div>
 </div><!-- modal -->
