--- a/src/app/restaurent/base-layout/header/header.component.html
+++ b/src/app/restaurent/base-layout/header/header.component.html
@@ -44,7 +44,7 @@
               </button>
               <div class="dropdown-menu dropdown-menu-right">
                 <a class="dropdown-item" href="javascript:void(0);" routerLink="/{{mobUrl}}/profile"><span><nb-icon icon="person-outline"></nb-icon></span> Profile</a>
-                 <a class="dropdown-item" href="javascript:void(0);" routerLink="/{{country}}/{{mobUrl}}/profile"><span><nb-icon icon="person-outline"></nb-icon></span> Profile</a>
+                <!-- <a class="dropdown-item" href="javascript:void(0);" routerLink="/{{country}}/{{mobUrl}}/profile"><span><nb-icon icon="person-outline"></nb-icon></span> Profile</a>-->
                 <a class="dropdown-item" href="javascript:void(0);" (click)="logout()"><span><nb-icon icon="log-out-outline"></nb-icon></span> Logout</a>
               </div>
             </div>
