--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -693,9 +693,13 @@
                       data-parent="#accordion" (click)="shecdule2()">
                       <div class="card-body">
                         <div class="row">
-                          <div class="col-sm-12 text-center">
+                          <div *ngIf="LTFOOnOff == 'F'" class="col-sm-12 text-center">
                             <h6>Schedule My Order</h6>
                             <p>Select a delivery time up to 7 days in advance.</p>
+                          </div>
+                          <div *ngIf="LTFOOnOff == 'T'" class="col-sm-12 text-center">
+                            <h2>Restaurant is Closed</h2>
+                            <p>No Future Order Available</p>
                           </div>
                           <div class="col-sm-12 mt-3">
                             <div class="row">
@@ -720,7 +724,7 @@
                                 <div class="tab-content px-sm-0" id="nav-tabContent">
                                   <div class="tab-pane fade"  [ngClass]="todayOpenClose == false?'show active':''" *ngIf="ASAPOnOFf == 'T'  && todayOpenClose == false" id="nav-home" role="tabpanel"
                                     aria-labelledby="nav-home-tab">
-                                    <button type="button" class="asap-btn btn">Deliver ASAP</button>
+                                    <button type="button" (click)="hide()" class="asap-btn btn">Deliver ASAP</button>
                                   </div>
                                   <div class="tab-pane fade" *ngIf="LTOnOff == 'T'" [ngClass]="todayOpenClose == true?'show active':''" id="nav-profile" role="tabpanel"
                                     aria-labelledby="nav-profile-tab">
